...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reverse Words" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bgw-ud-6zf">
                                <rect key="frame" x="16" y="196" width="382" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="titleLabel"/>
                                <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="34"/>
                                <color key="textColor" red="0.12941176469999999" green="0.12941176469999999" blue="0.12941176469999999" alpha="1" colorSpace="calibratedRGB"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This application will reverse your words. Please type text below " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstra
                                <rect key="frame" x="34" y="252" width="346" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="descriptionLabel"/>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                <color key="textColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59954268099999997" colorSpace="custom" customColorSpace="calibratedRGB"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to reverse" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gHg-r2-WWb">
                                <rect key="frame" x="16" y="332" width="382" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="reverseTextField"/>
                                <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
...
                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xL0-hO-ayY">
                                                        <rect key="frame" x="0.0" y="0.0" width="0.0" height="35"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                                        <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="24"/>
                                                        <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="All characters except alphabetic symbols" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UJI-5Z-NXk">
                                        <rect key="frame" x="0.0" y="0.0" width="382" height="48"/>
                                        <accessibility key="accessibilityConfiguration" identifier="allCharactersLabel"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
                                        <nil key="textColor"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to ignore" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Qu-UD-vl3">
                                        <rect key="frame" x="0.0" y="0.0" width="382" height="48"/>
                                        <accessibility key="accessibilityConfiguration" identifier="ignoreCharactersTextField"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                        <textInputTraits key="textInputTraits"/>
...
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Result:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CgS-Wl-A12">
                                <rect key="frame" x="170.5" y="520" width="73" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="resultTitle"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                <nil key="textColor"/>
...
